# Job-Seeking-Mate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml
.githooks/: commit-msg  (+2 more)
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  orchestrator.py  specialists.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agent_ws.py  analytics.py  applications.py  apply_ws.py  auth.py  candidates.py  credentials.py  health.py  jats.py  jobs.py  matching.py  orchestrator.py  settings.py  tailor.py
backend/app/core/: ai_client.py  config.py  security.py
backend/app/db/: jats_db.py  jats_models.py  models.py  session.py
backend/app/db/migrations/: README.md  env.py
backend/app/domain/models/: application.py  candidate.py  job.py  matching.py
backend/app/repositories/: candidate_repo.py  job_repo.py
backend/app/schemas/: application.py  candidate.py  jats.py  job.py  matching.py  tailor.py
backend/app/services/: analytics_service.py  application_automation.py  browser_apply.py  browser_launcher.py  cover_letter.py  credential_store.py  cv_parser.py  indeed_agent.py  jats_service.py  job_discovery.py  job_hunt_intelligence.py  linkedin_agent.py  matcher.py  pdf_generator.py  resume_tailor.py  seek_agent.py  tailor_service.py  tracker.py
backend/app/workers/: queue.py  tasks.py
backend/tests/: test_agents.py  test_application.py  test_cors.py  test_cv_parser.py  test_endpoints.py  test_health.py  test_job_discovery.py  test_matching.py
(+38 files in other folders)
