[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-seeking-mate-backend"
version = "0.1.0"
description = "FastAPI backend for Job-Seeking-Mate"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.7.0",
  "email-validator>=2.2.0",
  "sqlalchemy>=2.0.38",
  "alembic>=1.15.0",
  "psycopg[binary]>=3.2.5",
  "redis>=6.0.0",
  "celery>=5.5.0",
  "anthropic>=0.52.0",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.13.0",
  "python-multipart>=0.0.20",
  "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "httpx>=0.28.1",
  "ruff>=0.11.0",
  "mypy>=1.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = []
